codegen/ui_tests/rhai_mod_unknown_type_return.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0412]: cannot find type `boool` in this scope
  --> ui_tests/rhai_mod_unknown_type_return.rs:12:37
   |
12 |     pub fn test_fn(input: Point) -> boool {
   |                                     ^^^^^ help: a builtin type with a similar name exists: `bool`
